--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.11.2
 line-bot-sdk==1.17.0
 MarkupSafe==1.1.1
 openpyxl==3.0.5
+psycopg2==2.8.6
 requests==2.24.0
 urllib3==1.25.11
 Werkzeug==1.0.1
